using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Unity1Week_MainGameSystem_v4{

    /// <summary>
    /// ゲーム内のシーン名前をそのままEnumとして管理する
    /// ゲーム内にシーンを追加する際、ここにも同名の要素を追加する必要がある
    /// </summary>
    public enum E_SceneName {
        SampleScene
    }
}
